@@ -5,10 +5,8 @@ import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
-import com.etraveli.cardcost.domain.dbo.ClearanceCardCost;
 import com.etraveli.cardcost.domain.dto.CardCost;
 import com.etraveli.cardcost.service.CardInfoServiceDao;
-import reactor.core.publisher.Mono;
 
 @Service
 public class ManagementQueryService {
@@ -23,6 +21,6 @@ public class ManagementQueryService {
     return cardInfoServiceDao.getPaginated(PageRequest.of(page, size))
         .stream()
         .map(val -> CardCost.builder().cost(val.getAmount()).country(val.getId()).build())
-        .collect(Collectors.toList());
+        .toList();
   }
 }
